fixing the page to be responsive on mobile phones

--- a/style.css
+++ b/style.css
@@ -133,21 +133,22 @@ CONTACT
 */
 
 #contact {
-    background-color: #dce9ff;
+  background-color: #dce9ff;
 }
 
 form {
-    width: 100%;
-    max-width: 600px;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
 
-input, textarea {
-    margin-bottom: 24px;
-    font-size: 20px;
-    padding: 6px 12px;
+input,
+textarea {
+  margin-bottom: 24px;
+  font-size: 20px;
+  padding: 6px 12px;
 }
 
 /*
@@ -157,21 +158,46 @@ FOOTER
 */
 
 footer {
-    background-color: #aaf5ff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #aaf5ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__logo {
-    max-width: 480px;
-    margin-bottom: 16px;
+  max-width: 480px;
+  margin-bottom: 16px;
 }
 
 .footer__links {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
-.footer__link{
-    padding: 0 16px;
+.footer__link {
+  padding: 0 16px;
+}
+
+/*SMALL SMARTPHONES, TABLETS, LARGE SMARTPHONES */
+@media (max-width: 728px) {
+.row {
+  flex-direction: column;
+  }
+
+.home__description {
+  margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  text-align: center;
+  font-size: 60px;
+}
+
+.subheader {
+  text-align: center;
+  font-size: 28px;
+}
+
+
 }
